// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders with as correctly 1`] = `
"<section data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`Card > renders with class correctly 1`] = `
"<div data-slot="root" class="overflow-hidden bg-default ring ring-default divide-y divide-default rounded-xl">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with default slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <!--v-if-->
  <div data-slot="body" class="p-4 sm:p-6">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`Card > renders with description correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">
    <!--v-if-->
    <div data-slot="description" class="mt-1 text-muted text-sm">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with description slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">
    <!--v-if-->
    <div data-slot="description" class="mt-1 text-muted text-sm">Description slot</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with footer slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="footer" class="p-4 sm:px-6">Footer slot</div>
</div>"
`;

exports[`Card > renders with header slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">Header slot</div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with title and description correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">
    <div data-slot="title" class="text-highlighted font-semibold">Title</div>
    <div data-slot="description" class="mt-1 text-muted text-sm">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with title correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">
    <div data-slot="title" class="text-highlighted font-semibold">Title</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with title slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <div data-slot="header" class="p-4 sm:px-6">
    <div data-slot="title" class="text-highlighted font-semibold">Title slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with ui correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with variant outline correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with variant soft correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-elevated/50 divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with variant solid correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-inverted text-inverted">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Card > renders with variant subtle correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden bg-elevated/50 ring ring-default divide-y divide-default">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;
